--- a/views/version.jade
+++ b/views/version.jade
@@ -3,36 +3,37 @@ extends layout
 block content
     .btn-group
         if previous
-            a.btn(href="/versions/#{page._id}/#{previous._id}") Previous
+            a.btn(href="/versions/#{page._id}/#{previous._id}")= __("previous")
         else
-            span.btn.disabled Previous
+            span.btn.disabled= __("previous")
         if next
-            a.btn(href="/versions/#{page._id}/#{next._id}") Next
+            a.btn(href="/versions/#{page._id}/#{next._id}")= __("next")
         else
-            span.btn.disabled Next
+            span.btn.disabled= __("next")
 
-    h1 Version for #{page.title}
-    small from #{version.lastModified}
+    h1= __("version-for", page.title)
+    small= __("last-modified-by")
+        strong= version.lastmodified
 
     dl
-        dt Title
+        dt= __("title")
         dd= version.title
 
-        dt URI
+        dt= __("uri")
         dd= version.path
 
-        dt Modified by
+        dt= __("modified-by")
         dd= version.modifiedBy
 
-        dt Last modified
+        dt= __("last-modified-by")
         dd= version.lastModified
 
-        dt Content
+        dt= __("content")
         dd!= version.content
 
-        dt Tags
+        dt= __("tags")
         dd= version.tags.join(", ")
 
     form(method="POST", action="/versions/#{page._id}/#{version._id}/restore")
-        input.pull-right(type="submit").btn.btn-danger(href="#{page.path}", value="Restore")
-    a.btn.btn-primary(href="#{page.path}") Back to page
+        input.pull-right(type="submit").btn.btn-danger(href="#{page.path}", value=__("restore"))
+    a.btn.btn-primary(href="#{page.path}")= __("back-to-page")
