--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
     link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.css')
     link(rel="stylesheet", href="/vendor/highlight.js/styles/solarized_light.css")
     script(type='text/javascript', src='/vendor/requirejs/require.min.js')
+    script(type='text/javascript', src='/vendor/sprintf.min.js')
     script(type='text/javascript', src='/javascripts/locale.js')
     script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
     script
