--- a/views/page.jade
+++ b/views/page.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1.title.edit(contenteditable)= page.title
+    h1.title.edit(contenteditable, data-last-modified=page.lastModified && page.lastModified.toUTCString())= page.title
 
     div.tags
         h2.label.label-success
