make siteName configurable

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html
   body
       .navbar.navbar-static-top.navbar-inverse
           .navbar-inner
-              a.brand(href="/") Node Wiki
+              a.brand(href="/")= siteName
               ul.nav
                   li
                       a(href="/pages") All Pages
