move drop hint up to prevent overlaying content fix #32

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,10 +61,14 @@ a {
     opacity: 1;
 }
 
+.content {
+    min-height: 200px;
+}
+
 .content:before{
     position: absolute;
     right: 0;
-    top: 0;
+    top: -18px;
     color: #ccc;
     font-size:9px;
     text-transform: uppercase;
