--- a/views/layout.jade
+++ b/views/layout.jade
@@ -50,12 +50,18 @@ html
                                   a(href=page.path)= page.title
 
                 ul.nav.pull-right
-                    li.dropdown.pull-right
-                        a.dropdown-toggle(href="#", data-toggle="dropdown")
-                            = __("tasks")
-                            b.caret
-                        ul.dropdown-menu
-                            li: a#move-page(href="#")= __("move-page")
+                    if (page)
+                        li.dropdown.pull-right
+                            a.dropdown-toggle(href="#", data-toggle="dropdown")
+                                = __("tasks")
+                                b.caret
+                            ul.dropdown-menu
+                                li: a#move-page(href="#")= __("move-page")
+                                if (page.deleted)
+                                    li: a#restore-page(href="#")= __("restore-page")
+                                else
+                                    li: a#delete-page(href="#")= __("delete-page")
+
                     mixin languageSwitcher
 
                 form.navbar-search.pull-right(action="/search", method="GET")
