add base for modularizing frontend code

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -94,4 +94,5 @@ html
             script(type="text/javascript", src='/vendor/ckeditor/ckeditor.js')
             script(src="/vendor/highlight.js/highlight.pack.js")
             script(type="text/javascript", src="/javascripts/application.js")
+            script(type="text/javascript", src="/javascripts/app.js")
 
