use handlebars for modal

--- a/frontend/templates/modal.hbs
+++ b/frontend/templates/modal.hbs
@@ -1,1 +1,12 @@
-<h1>Hello {{name}}!</h1>
+<form class="modal hide fade">
+    <div class="modal-header">
+        <h3>{{title}}</h3>
+    </div>
+    <div class="modal-body">
+        <p>{{description}}</p>
+    </div>
+    <div class="modal-footer">
+        <button type="submit" class="btn btn-warning">{{confirm}}</button>
+        <button type="submit" class="btn btn-cancle">{{cancle}}</button>
+    </div>
+</form>
