use modal for page actions

--- a/frontend/templates/modal.hbs
+++ b/frontend/templates/modal.hbs
@@ -7,7 +7,7 @@
         {{#each fields}}
             <div class="control-group">
                 <label class="control-label" for="control-{{this.name}}">{{this.label}}</label>
-                <input class="control" type="text" id="control-{{this.name}}" name="{{this.name}}" placeholder="{{this.placeholder}}"/>
+                <input class="control" type="text" id="control-{{this.name}}" name="{{this.name}}" placeholder="{{this.placeholder}}" value="{{this.value}}"/>
             </div>
         {{/each}}
     </div>
