--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,10 +3,10 @@ doctype 5
 html
   head
     title= title
-    link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.css')
-    link(rel="stylesheet", href="/vendor/highlight.js/styles/solarized_light.css")
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    style
+    link(rel='stylesheet', type="text/css", href='/vendor/bootstrap/css/bootstrap.css')
+    link(rel="stylesheet", type="text/css", href="/vendor/highlight.js/styles/solarized_light.css")
+    link(rel='stylesheet', type="text/css", href='/stylesheets/style.css')
+    style.
         .content:before{
             content: "#{__("drop-images-and-other-media")}";
         }
@@ -16,7 +16,7 @@ html
     script(type='text/javascript', src='/vendor/sprintf.min.js')
     script(type='text/javascript', src='/javascripts/locale.js')
     script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
-    script
+    script.
         window.jQuery || document.write('<script src="/vendor/jquery-1.7.1.min.js"><\/script>')
     script(type='text/javascript', src='/vendor/bootstrap/js/bootstrap.js')
 
