--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,74 +1,28 @@
 include mixins
+include navigation
 doctype 5
 html
-  head
-    title= title
-    link(rel='stylesheet', type="text/css", href='/vendor/bootstrap/css/bootstrap.css')
-    link(rel="stylesheet", type="text/css", href="/vendor/highlight.js/styles/solarized_light.css")
-    link(rel='stylesheet', type="text/css", href='/stylesheets/style.css')
-    style.
-        .content:before{
-            content: "#{__("drop-images-and-other-media")}";
-        }
-        .tags:after {
-            content: "#{__("tags-description")}";
-        }
-    script(type='text/javascript', src='/vendor/sprintf.min.js')
-    script(type='text/javascript', src='/javascripts/locale.js')
-    script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
-    script.
-        window.jQuery || document.write('<script src="/vendor/jquery-1.7.1.min.js"><\/script>')
-    script(type='text/javascript', src='/vendor/bootstrap/js/bootstrap.js')
+    head
+        title= title
+        link(rel='stylesheet', type="text/css", href='/vendor/bootstrap/css/bootstrap.css')
+        link(rel="stylesheet", type="text/css", href="/vendor/highlight.js/styles/solarized_light.css")
+        link(rel='stylesheet', type="text/css", href='/stylesheets/style.css')
+        style.
+            .content:before{
+                content: "#{__("drop-images-and-other-media")}";
+            }
+            .tags:after {
+                content: "#{__("tags-description")}";
+            }
+        script(type='text/javascript', src='/vendor/sprintf.min.js')
+        script(type='text/javascript', src='/javascripts/locale.js')
+        script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
+        script.
+            window.jQuery || document.write('<script src="/vendor/jquery-1.7.1.min.js"><\/script>')
+        script(type='text/javascript', src='/vendor/bootstrap/js/bootstrap.js')
 
-  body
-      .navbar.navbar-static-top.navbar-inverse
-          .navbar-inner
-              a.brand(href="/")= siteName
-              ul.nav
-                  li
-                      a(href="/pages")= __("all-pages")
-                  li
-                      a(href="/tags")= __("all-tags")
-                  li
-                      a(href="/versions")= __("version-history")
-                  li.dropdown
-                      a.dropdown-toggle(href="#", data-toggle="dropdown")
-                          = __("changes")
-                          b.caret
-
-                      ul.dropdown-menu
-
-                          li.nav-header= __("latest-pages")
-                          each page in latest
-                              li
-                                  a(href=page.path)= page.title
-
-                          li.nav-header= __("recent-changes")
-                          each page in recentChanges
-                              li
-                                  a(href=page.path)= page.title
-                    li: a(href="/deleted-pages")= __("deleted-pages")
-
-
-                ul.nav.pull-right
-                    if (page)
-                        li.dropdown.pull-right
-                            a.dropdown-toggle(href="#", data-toggle="dropdown")
-                                = __("tasks")
-                                b.caret
-                            ul.dropdown-menu
-                                if (!page.deleted)
-                                    li: a#move-page(href="#")= __("move-page")
-                                if (page.deleted)
-                                    li: a#restore-page(href="#")= __("restore-page")
-                                else
-                                    li: a#delete-page(href="#")= __("delete-page")
-
-                    mixin languageSwitcher
-
-                form.navbar-search.pull-right(action="/search", method="GET")
-                    input.search-query(type="text", placeholder="Search", name="q", id="q")
-
+    body
+        mixin navigation
         .container(class=page && page.deleted ? "deleted" : "")
             #messages.messages
             if page && page.deleted
