--- a/views/version.jade
+++ b/views/version.jade
@@ -1,6 +1,6 @@
 extends layout
 
-block content
+block main
     .btn-group
         if previous
             a.btn(href="/versions/#{page._id}/#{previous._id}")= __("previous")
