--- a/views/versions.jade
+++ b/views/versions.jade
@@ -1,6 +1,6 @@
 extends layout
 
-block content
+block main
     if(document && document.versions)
         table.table.tVable-bordered
             tr
