--- a/views/pages_cover.jade
+++ b/views/pages_cover.jade
@@ -1,6 +1,6 @@
 extends layout
 
-block content
+block main
     div.navbar
         div.navbar-inner
             a(href="#").brand= __("all-pages")
